# neurino

./: CMakeLists.txt  Doxyfile  config.h  neurino-config.h  neurino-math.h  neurino-rewrite.pro  neurino.h
algos/: algo.cpp  algo.h  bpropalgo.cpp  bpropalgo.h  bpropbatchalgo.cpp  bpropbatchalgo.h  bpropmalgo.cpp  bpropmalgo.h  rpropalgo.cpp  rpropalgo.h
benchmark/: bench.cpp  bench.h  benchbpropbatchxor.cpp  benchbpropbatchxor.h  benchbpropxor.cpp  benchbpropxor.h  benchrpropxor.cpp  benchrpropxor.h  common.h  main.cpp
core/: layer.h  link.cpp  link.h  network.cpp  network.h  neuron.cpp  neuron.h
core/layers/: inputlayer.cpp  inputlayer.h  layer.cpp  layer.h  outputlayer.cpp  outputlayer.h
data/: networkdata.cpp  networkdata.h  networkdataarray.cpp  networkdataarray.h  networkdatacsv.cpp  networkdatacsv.h  sample.cpp  sample.h
errors/: error.cpp  error.h  errormse.cpp  errormse.h  errorrmse.cpp  errorrmse.h  networkerror.cpp  networkerror.h  networkerrormse.cpp  networkerrormse.h  networkerrorrmse.cpp  networkerrorrmse.h
functions/: elliottfunction.cpp  elliottfunction.h  elliottsymmfunction.cpp  elliottsymmfunction.h  function.cpp  function.h  linearfunction.cpp  linearfunction.h  sigmoidfunction.cpp  sigmoidfunction.h  tanhfunction.cpp  tanhfunction.h  thresholdfunction.cpp  thresholdfunction.h
tests/: input.csv  test_bprop_xor.cpp  test_network_creation.cpp  test_networkdata.cpp  test_networkdata_array.cpp  test_networkdata_csv.cpp  test_rprop_xor.cpp
